[gd_scene load_steps=3 format=3 uid="uid://fbshi8poj5u0"]

[ext_resource type="Script" uid="uid://bsmiq6qygmqlf" path="res://src/equipment/impls/arc_tower/arc_tower_projectile.gd" id="1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_arc"]
radius = 10.0

[node name="ArcTowerProjectile" type="Area2D"]
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_arc")

[node name="HitEffect" type="Node2D" parent="."]

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."] 